<resources>
    <string name="app_name">Recomecio</string>
    <string name="nome_do_produto">Nome do produto</string>
    <string name="valor">Valor</string>
    <string name="adicionar">Adicionar</string>
    <string name="tituloProduto">Título do produto</string>
    <string name="descricao">Descrição</string>
    <string name="produto">Produto</string>
    <string name="listagem">listagem</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="pesquisar">Pesquisar</string>
    <string-array name="quantidade">
        <item>Quantidade</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="categoria">
        <item>Categoria</item>
        <item>Reciclaveis</item>
        <item>Artesanatos</item>
        <item>Desapegos</item>
    </string-array>
    <string-array name="pagamento">
        <item>Boleto</item>
        <item>PIX</item>
        <item>Cartão de Credito</item>
           </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editar">Editar</string>
    <string name="deletar">deletar</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bem Vindo(a)!"</string>
    <string name="invalid_username">Usuário Inválido</string>
    <string name="invalid_password">A senha deve conter ao menos 5 caracteres</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="login">Faça seu Login</string>
    <string name="Cadastro">Novo por aqui? Crie uma conta</string>
    <string name="Skip">Ir para a HomePage</string>
    <string name="BVD">Seja Bem Vindo(a)</string>
    <string name="InfoBVD">Faça o login ou cadastre-se para ter acesso a todas as funções</string>
    <string name="Saudacao">Seja Bem Vindo(a)</string>
    <string name="InfoSaudacao">Faça o Login ou Cadastre-se para ter acesso a todas as funções ;)</string>
    <string name="Emaillogin">Digite seu Login</string>
    <string name="LoginPassword">Digite sua Senha</string>
    <string name="botaoEntrar">Entrar</string>
    <string name = "finalizar">Finalizar</string>
    <string name="RecuperarSenha">Esqueceu sua senha?</string>
    <string name="AuxSenha">Auxílio de Senha</string>
    <string name="AuxDescript">Será enviado um e-mail com as informações e o link para recuperação de senha caso exista uma conta associada a ele</string>
    <string name="InsertEmail">Digite o e-mail associado a sua conta:</string>
    <string name="e_mailRecover">E-Mail</string>
    <string name="ContinuarEmail">Enviar</string>
    <string name="ProblemaEmail">Seu endereço de e-mail foi alterado?</string>
    <string name="InfoProblemaEmail">Se você não usa mais o endereço de e-mail associado a conta ou esqueceu ele, entre em contato com o Serviço de Atendimento ao Cliente para ajudar a restaurar o seu acesso.</string>
    <string name="CadastroInfo">Para prosseguir preencha todos os campos abaixo:</string>
    <string name="BotaoCadastro">Cadastrar</string>
    <string name="TermosDeUso">Ao criar uma conta, você concorda com as Condições de Uso da ReComerce. Por Favor, verifique a Notificação de Privacidade, Notificação de Cookies e a Notificação de Anúncios Baseados em Interesse.</string>
    <string name="nomeCAD">Nome</string>
    <string name="emailCAD">Email</string>
    <string name="senhaCAD">Senha</string>
    <string name="todo">TODO</string>
    <string name="imagem_de_fundo_edit_produto">imagem de fundo edit produto</string>
    <string name="imagem_de_fundo_produto">imagem de fundo produto</string>
    <string name="logo_com_borda">logo com borda</string>
    <string name="categoria">categoria</string>
    <string name="quantidade">quantidade</string>
    <string name="comprar">comprar</string>
    <string name="imagem_de_fundo_menu">imagem de fundo menu</string>
    <string name="descricao">Descrição</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="perfil">Perfil</string>
    <string name="adicionar_produto">Adicionar Produto</string>
</resources>