<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/paginaPrincipal"
        android:icon="@drawable/ic_baseline_home_24"
        android:iconTint="#004A00"
        android:textSize="20sp"
        android:title="@string/home" />

    <item
        android:id="@+id/postagemFragment"
        android:icon="@drawable/ic_baseline_add_24"
        android:iconTint="#004A00"
        android:textSize="20sp"
        android:title="@string/adicionar_produto" />

    <item
        android:id="@+id/inicioFragment"
        android:icon="@drawable/ic_baseline_person_24"
        android:iconTint="#004A00"
        android:textSize="20sp"
        android:title="@string/perfil" />

</menu>